[gd_scene load_steps=3 format=3 uid="uid://dvdynl6eir40o"]

[ext_resource type="Script" path="res://src/GameSession/GameSessionMenu.gd" id="1_usq6o"]
[ext_resource type="PackedScene" uid="uid://o4u142w4qkln" path="res://src/GameMenu.tscn" id="2_xi6a4"]

[node name="GameSessionMenu" type="PanelContainer"]
editor_description = "UI-68"
script = ExtResource("1_usq6o")
_main_menu_scene = ExtResource("2_xi6a4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer"]
editor_description = "UI-69"
layout_mode = 2
text = "GAMESESSIONMENU_SAVE"

[node name="LoadButton" type="Button" parent="MarginContainer/VBoxContainer"]
editor_description = "UI-70"
layout_mode = 2
text = "GAMESESSIONMENU_LOAD"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
editor_description = "UI-10"
layout_mode = 2
text = "GAMESESSIONMENU_OPTIONS"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
editor_description = "UI-71"
layout_mode = 2
text = "GAMESESSIONMENU_MAINMENU"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
editor_description = "UI-72"
layout_mode = 2
text = "GAMESESSIONMENU_QUIT"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
editor_description = "SS-64, UI-80, UIFUN-79"
layout_mode = 2
text = "GAMESESSIONMENU_CLOSE"

[node name="MainMenuDialog" type="ConfirmationDialog" parent="."]
title = "GAMESESSIONMENU_MAINMENU_DIALOG_TITLE"
ok_button_text = "DIALOG_OK"
dialog_text = "GAMESESSIONMENU_MAINMENU_DIALOG_TEXT"
cancel_button_text = "DIALOG_CANCEL"

[node name="QuitDialog" type="ConfirmationDialog" parent="."]
title = "GAMESESSIONMENU_QUIT_DIALOG_TITLE"
ok_button_text = "DIALOG_OK"
dialog_text = "GAMESESSIONMENU_QUIT_DIALOG_TEXT"
cancel_button_text = "DIALOG_CANCEL"

[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenuButton" to="MainMenuDialog" method="popup_centered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="QuitDialog" method="popup_centered"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CloseButton" to="." method="hide"]
[connection signal="confirmed" from="MainMenuDialog" to="." method="_on_main_menu_confirmed"]
[connection signal="confirmed" from="QuitDialog" to="." method="_on_quit_confirmed"]
